force-app/main/default/objects/Idea__c/fields/Completed_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Completed_Requirements__c</fullName>
    <inlineHelpText>How many of our requirements are complete?</inlineHelpText>
    <label>Completed Requirements</label>
    <summaryFilterItems>
        <field>Requirement__c.Status__c</field>
        <operation>equals</operation>
        <value>Complete</value>
    </summaryFilterItems>
    <summaryForeignKey>Requirement__c.Idea__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>