force-app/main/default/objects/Idea__c/fields/Number_of_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Requirements__c</fullName>
    <inlineHelpText>How many requirements do we have for this idea?</inlineHelpText>
    <label>Number of Requirements</label>
    <summaryForeignKey>Requirement__c.Idea__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>