force-app/main/default/objects/Idea__c/fields/Overall_Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>Overall_Delivery_Date__c</fullName>
    <inlineHelpText>When will this idea be delivered in its entirety?</inlineHelpText>
    <label>Overall Delivery Date</label>
    <summarizedField>Requirement__c.Due_Date__c</summarizedField>
    <summaryForeignKey>Requirement__c.Idea__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>