force-app/main/default/objects/Idea__c/recordTypes/Marketing.recordType-meta.xml
<RecordType>
    <fullName>Marketing</fullName>
    <active>true</active>
    <label>Marketing</label>
</RecordType>